--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -329,8 +329,13 @@ footer {
   justify-content: center;
   flex-wrap: wrap;
   background-color: #FF8DC0;
-  padding: 40px 100px 12px 100px;
+  padding: 20px;
   border-top: 8px solid black;
+}
+@media (min-width: 768px) {
+  footer {
+    padding: 40px 100px 12px 100px;
+  }
 }
 footer .descripcion {
   align-self: flex-end;
@@ -339,13 +344,21 @@ footer .descripcion {
 footer .redes {
   width: 100%;
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
+  flex-wrap: wrap;
   gap: 8px;
   font-size: 24px;
   font-weight: 900;
   color: white;
+}
+@media (min-width: 768px) {
+  footer .redes {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-start;
+  }
 }
 footer .redes img {
   width: 30px;
